# ACDS

./: .gitignore  Development_log.md  First_person.md  Lessons_learned.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
process-swarm-gen2/: .gitignore  pyproject.toml
process-swarm-gen2/docs/: ACDS_RED_TEAM_SUITE.md  ACDS_USE_CASE_SUITE.md  AGENTS.md  ARCHITECTURE.md  IDENTITY.md  INSTALL_MACOS.md  MEMORY.md  SECURITY.md  SOUL.md  TOOLS.md  USER.md  acds_process_swarm_integration.md  activity_log.md  baseline.manifest.json  data_dictionary.md  first_person_log.md  key_registry.json  lessons_learned.md  node_identity.json  tool_policy.json
process-swarm-gen2/grits/: __init__.py  artifact_writer.py  baseline.py  drift_analyzer.py  executor.py  finding_classifier.py  recommender.py  report_compiler.py  run_request.py  runner.py  suite_resolver.py
process-swarm-gen2/policies/: smtp_relay_profile.json
process-swarm-gen2/process_swarm/: acds_client.py  config.py  inference.py
process-swarm-gen2/proof_ui/: __init__.py  __main__.py  context_report.py  server.py
process-swarm-gen2/runtime/: __init__.py
process-swarm-gen2/schemas/: action_table.schema.json  archetype_classification.schema.json  behavior_proposal.schema.json  behavior_validation_result.schema.json  capability_lease.schema.json  constraint_set.schema.json  exchange_receipt.schema.json  execution_plan.schema.json  execution_record.schema.json  governance_warning_record.schema.json  grits_diagnostic_result.schema.json  grits_finding.schema.json  (+6 more)
(+2459 files in other folders)
